# GraphicsEngine

./: .clang-format  .gitignore  .gitignore.gitignore  CMakeLists.txt  MsbuildCompileGenerateOpenGL.bat  MsbuildCompileGenerateVulkan.bat  README.md
OpenGL/: .gitignore.gitignore  CMakeListsTest.txt  OpenGl.sln  OpenGl.vcxproj  compile_commands.json  imgui.ini
OpenGL/res/shaders/: Basic.shader
OpenGL/shaders/: simple.frag  simple.vert
OpenGL/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h  main.cpp
OpenGL/src/tests/: Test.h  TestClearColor.cpp
Vulkan/: Vulkan.sln  compile_commands.json
Vulkan/Vulkan/: .gitignore.gitignore  Vulkan.vcxproj  main.cpp
Vulkan/Vulkan/x64/Debug/: Vulkan.exe.recipe  Vulkan.ilk  vc143.idb
Vulkan/Vulkan/x64/Debug/Vulkan.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Vulkan.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VulkanSource/: main.cpp
src/: vk_engine.cpp  vk_initializers.h
